syntax = "proto3";

package vitepb;

message AccountBlockMeta {
    uint64 accountId = 1;
    uint64 height = 2;
    repeated uint64 receiveBlockHeight = 3;

    uint64 snapshotHeight = 4;
    uint64 refSnapshotHeight = 5;
}